# pyNFFT3

./: .buildinfo  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html
.github/workflows/: ci.yml  format.yml  release.yml  sphinx.yml
_sources/: api.rst.txt  index.rst.txt  tutorial.rst.txt
_sources/api/: fastsum.rst.txt  fsft.rst.txt  nfct.rst.txt  nfft.rst.txt  nfsft.rst.txt  nfst.rst.txt
_static/: basic.css  custom.css
api/: fastsum.html  fsft.html  nfct.html  nfft.html  nfsft.html  nfst.html
doc/source/: api.rst  conf.py  index.rst
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
docs/source/_static/: classic.css
docs/source/api/: fastsum.rst  nfct.rst  nfft.rst  nfsft.rst  nfst.rst
src/pyNFFT3/: FSFT.py  NFCT.py  NFFT.py  NFSFT.py  NFST.py  __init__.py  fastsum.py  flags.py
src/pynfft3/: fastsum.py
tests/: FSFT_test.py  NFCT_test.py  NFFT_test.py  NFSFT_test.py  NFST_test.py  fastsum_test.py  run_tests.py
