[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyNFFT3"
version = "0.1.0"
authors = [
  { name="Michael Nolander", email="nolander.michael@gmail.com" },
]
description = "Python interface for the NFFT C library"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/NFFT/pyNFFT3"